--- a/AgroVI/src/components/Nabvar/Navbar.css
+++ b/AgroVI/src/components/Nabvar/Navbar.css
@@ -13,22 +13,33 @@
 }
 
 .top-navbar-menu{
-    margin-right: 6vw;
-    width: 600px;
+    width: 70vw;
     height: 10vh;
+    margin-right: 50px;
     list-style: none;
     display: flex;
     font-weight: 400;
-    justify-content: space-around;
     align-items: center;
+    justify-content: end;
     font-size: large;
+}
+.top-navbar-menu li{
+    width: 170px;
+}
+.hide{
+    display: none;
 }
 
 .top-navbar-menu-item {
     all:unset;
+    display: block;
+    text-align: center;
+    color:#43A047;
 }
 .top-navbar-menu-item:hover{
     all:unset;
+    display: block;
+    text-align: center;
     color: rgb(0, 140, 255);
     cursor: pointer;
     border-bottom: 3px solid rgb(0, 140, 255);
