--- a/AgroVI/src/components/CropRecommendation/CropRecommandation.css
+++ b/AgroVI/src/components/CropRecommendation/CropRecommandation.css
@@ -10,13 +10,23 @@
 .crop-pred-form{
     background-color: rgb(218, 218, 218);
     width: 80vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    gap:10px;
+}
+.crop-pred-details{
+    background-color: rgb(218, 218, 218);
+    width: 80vw;
     height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    gap:15px;
 }
 
 .crop-pred-form p{
@@ -39,6 +49,19 @@
 }
 
 .crop-pred-form button{
+    all:unset;
+    margin-top: 10px;
+    background-color: #43A047;
+    width: 15rem;
+    height: 5vh;
+    text-align: center;
+    border-radius: 5px;
+    color: aliceblue;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.crop-pred-btn{
     all:unset;
     margin-top: 10px;
     background-color: #43A047;
